--- a/doc/bitstream_filters.texi
+++ b/doc/bitstream_filters.texi
@@ -505,7 +505,7 @@ Log trace output containing all syntax elements in the coded stream
 headers (everything above the level of individual coded blocks).
 This can be useful for debugging low-level stream issues.
 
-Supports H.264, H.265 and MPEG-2.
+Supports H.264, H.265, MPEG-2 and VP9.
 
 @section vp9_superframe
 
