vaapi: Add MJPEG decode hwaccel

--- a/Changelog
+++ b/Changelog
@@ -21,7 +21,7 @@ version <next>:
 - video mix filter
 - video normalize filter
 - audio lv2 wrapper filter
-- VAAPI VP8 decoding
+- VAAPI MJPEG and VP8 decoding
 - AMD AMF H.264 and HEVC encoders
 - video fillborders filter
 - video setrange filter
