sbc: add raw muxer for SBC

--- a/doc/general.texi
+++ b/doc/general.texi
@@ -501,7 +501,7 @@ library:
 @item raw NULL                  @tab X @tab
 @item raw video                 @tab X @tab X
 @item raw id RoQ                @tab X @tab
-@item raw SBC                   @tab   @tab X
+@item raw SBC                   @tab X @tab X
 @item raw Shorten               @tab   @tab X
 @item raw TAK                   @tab   @tab X
 @item raw TrueHD                @tab X @tab X
