avfilter/avf_concat: add next command
This patch makes it possible to dinamically close the current segment
and step to the next one by introducing command handling capabilities
into the filter. This new feature is very usefull when working with
real-time sources or live streams as source. Combinig usage with zmqsend
tool you can interactively end the current segment and step to next one.

Signed-off-by: Bela Bodecs <bodecsb@vivanet.hu>

--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -18153,6 +18153,14 @@ do not have exactly the same duration in the first file.
 
 @end itemize
 
+@subsection Commands
+
+This filter supports the following commands:
+@table @option
+@item next
+Close the current segment and step to the next one
+@end table
+
 @section drawgraph, adrawgraph
 
 Draw a graph using input video or audio metadata.
