avcodec/hapqa_extract_bsf : add new bsf filter
convert HapQA data to HAPQ or HAPAlphaOnly
by copying the corresponding texture

--- a/Changelog
+++ b/Changelog
@@ -46,6 +46,7 @@ version <next>:
   They can be found at http://git.videolan.org/?p=ffmpeg/nv-codec-headers.git
 - native SBC encoder and decoder
 - drmeter audio filter
+- hapqa_extract bitstream filter
 
 
 version 3.4:
