--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -19941,8 +19941,11 @@ Set orientation, can be @code{horizontal} or @code{vertical},
 default is @code{horizontal}.
 
 @item s
-Set step size, allowed range s [0, 5]. Default is 0, which means
+Set step size, allowed range is [0, 5]. Default is 0, which means
 step is disabled.
+
+@item p
+Set background opacity, allowed range is [0, 1]. Default is 0.
 @end table
 
 @section showwaves
