--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -20033,6 +20033,20 @@ Cubic root.
 @end table
 
 Default is linear.
+
+@item draw
+Set the draw mode. This is mostly useful to set for high @var{n}.
+
+Available values are:
+@table @samp
+@item scale
+Scale pixel values for each drawn sample.
+
+@item full
+Draw every sample directly.
+@end table
+
+Default vlaue is @code{scale}.
 @end table
 
 @subsection Examples
