--- a/doc/filters.texi
+++ b/doc/filters.texi
@@ -19970,6 +19970,10 @@ step is disabled.
 
 @item p
 Set background opacity, allowed range is [0, 1]. Default is 0.
+
+@item m
+Set metering mode, can be peak: @code{p} or rms: @code{r},
+default is @code{p}.
 @end table
 
 @section showwaves
