avcodec/eac3: add support for dependent stream
Signed-off-by: Paul B Mahol <onemda@gmail.com>

--- a/Changelog
+++ b/Changelog
@@ -49,6 +49,7 @@ version <next>:
 - hapqa_extract bitstream filter
 - filter_units bitstream filter
 - AV1 Support through libaom
+- E-AC-3 dependent frames support
 
 
 version 3.4:
