Add Sega FILM muxer
Signed-off-by: Josh de Kock <josh@itanimul.li>

--- a/Changelog
+++ b/Changelog
@@ -52,6 +52,7 @@ version <next>:
 - E-AC-3 dependent frames support
 - bitstream filter for extracting E-AC-3 core
 - Haivision SRT protocol via libsrt
+- segafilm muxer
 
 
 version 3.4:
